fix css overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
